fixed hours spacing

--- a/stylepage2.css
+++ b/stylepage2.css
@@ -134,7 +134,7 @@ button:hover {
 }
 
 .description-text {
-  font-size: 18px;
+  font-size: 16px;
   text-align: left;
   padding-left: 15px;
   font-family: var(--secondary-font);
